* Fix overflow  * Added todos * Sketched out basic matrix class * Added apply pattern * dont draw grid every frame

--- a/Conway/general/gol-any.css
+++ b/Conway/general/gol-any.css
@@ -1,3 +1,7 @@
+body {
+  overflow: unset;
+}
+
 .title h1 {
   font-size: 4vw;
   margin-top: 7px;
@@ -50,5 +54,6 @@
   height: unset;
 }
 .main-content {
-  height: calc(98vh - 300px);
+  height: calc(98vh - 220px);
+  overflow: auto;
 }
